# lk

./: CMakeLists.txt  main.cpp
frag/: triangle.shader
lib/: glad.c
lib/include/glad/: glad.h
src/: FragmentShader.cpp  FragmentShader.h  GlWindow.cpp  GlWindow.h  Matrix.cpp  Matrix.h  Matrix.hpp  VAO.cpp  VAO.h  VertexShader.cpp  VertexShader.h  main.cpp
src/object/: Resource.cpp  Resource.h  VAO.cpp  VAO.h
src/shader/: FragmentShader.cpp  FragmentShader.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  VertexShader.cpp  VertexShader.h
src/texture/: Texture.cpp  Texture.h
src/tool/: Matrix.hpp
vert/: triangle.shader
